k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lab
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-lab
  template:
    metadata:
      labels:
        app: nginx-lab
    spec:
      containers:
      - name: nginx
        image: eberlin/nginx-lab:1.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        # Monta o ConfigMap como arquivo /etc/load_flag/flag
        volumeMounts:
        - name: load-flag
          mountPath: /etc/load_flag
          readOnly: true
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "500m"
      volumes:
      - name: load-flag
        configMap:
          name: nginx-loadtest
