k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lab-svc
spec:
  type: NodePort
  selector:
    app: nginx-lab
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
